<resources>
    <string name="app_name">Prayer Circle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- From the Slide test *********************************************************************************************************-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Create your account!</string>
    <string name="slide_1_desc">By creating your account,
        you can access prayer requests that other people have allowed to access,
        you can also create prayer groups with other users and also receive event notifications,
        prayer networks, and a lot more...</string>

    <string name="slide_2_title">Write your prayer\n and Share!</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Create pray groups!</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">Set pray alarm!</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="welcome_title">Welcome to \n Pray Circle App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- From the Slide test *********************************************************************************************************-->


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="prompt_password">Change Password</string>
    <string name="pray_groups">Pray Groups</string>
    <string name="prayer_watch">Prayer Watch</string>
    <string name="logout">Logout</string>
    <string name="my_prayers">My Prayers</string>
    <string name="prayer_title">Prayer Title</string>
    <string name="prayer_subject">When I am found upon my knees And all want is You to be with me I know You show yourself so true My hope is found in You</string>
    <string name="empty_my_prayer_list_title">You don/\'t have any prayers subject active!</string>
    <string name="empty_prayer_list_sub_title">Click on plus button down below to create a prayer subject</string>
    <string name="date">date</string>
    <string name="btn_user_register">User Registration</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_pray_title">Pray Title</string>
    <string name="hint_pray_subject">Pray Subject</string>
    <string name="btn_create_my_pray">Create my Prayer</string>
    <string name="complete_your_register">Complete your profile</string>
    <string name="edt_profile_firstname">Firstname</string>
    <string name="edt_profile_lastname">Lastname</string>
    <string name="edt_profile_email">Email</string>
    <string name="register_profile">Register Profile</string>
    <string name="edt_profile_country">Country</string>
    <string name="edt_profile_city">City</string>
    <string name="pick_a_profile_picture">Pick a profile picture</string>
    <string name="title_dialog_pick_event_cover">Chose a picture</string>
    <string name="register">register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="complete_profile">Complete your profile</string>

    <array name="pictures">
        <item>Take a picture</item>
        <item>Photo gallery</item>
    </array>

    <string name="profile_skip">Skip >></string>


</resources>
