<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_my_prayers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bkg"
    android:fitsSystemWindows="true"
    tools:context="se.android.praycircle.praycircle.activities.CreateUserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayoutPCInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_prayer_logo_circle"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtCompleteProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"
                    android:text="@string/complete_your_register"/>


            </LinearLayout>

            <!--Profile photos and Edit -->
            <RelativeLayout
                android:id="@+id/relativeLayoutProfilePhotoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/linearLayoutPCInfo">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImgRegisterProfileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/avatar_default"/>

                <ImageButton
                    android:id="@+id/imgButtonEditProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/circleImgRegisterProfileImage"
                    android:layout_alignRight="@id/circleImgRegisterProfileImage"
                    android:layout_alignEnd="@id/circleImgRegisterProfileImage"
                    android:src="@drawable/ic_edit_cover_24dp"
                    android:background="@android:color/transparent"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutRegisterUserProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/relativeLayoutProfilePhotoRegister">

                <EditText
                    android:id="@+id/editTextProfileFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_register_name_24dp"
                    android:drawablePadding="13dp"
                    android:hint="@string/edt_profile_firstname"/>

                <EditText
                    android:id="@+id/editTextProfileLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextProfileFirstName"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_register_name_24dp"
                    android:drawablePadding="13dp"
                    android:hint="@string/edt_profile_lastname"/>

                <EditText
                    android:id="@+id/editTextProfileCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextProfileLastName"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:inputType="textPostalAddress"
                    android:drawableLeft="@drawable/ic_email_brown_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/edt_profile_country"/>

                <EditText
                    android:id="@+id/editTextProfileCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextProfileCountry"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:inputType="textPostalAddress"
                    android:drawableLeft="@drawable/ic_email_brown_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/edt_profile_city"/>


            </RelativeLayout>

            <!--Register button -->
            <RelativeLayout
                android:id="@+id/relativeLayoutRegisterProfileButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:layout_below="@id/relativeLayoutRegisterUserProfile"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/imgViewRegisterIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_register_profile_24dp"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_profile"
                        android:textColor="@color/white"
                        android:layout_toRightOf="@id/imgViewRegisterIcon"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="invisible" />

</android.support.design.widget.CoordinatorLayout>
